--- a/circle.yml
+++ b/circle.yml
@@ -19,6 +19,7 @@ dependencies:
     - "apps/node_modules"
     - "~/.rvm/gems/ruby-2.2.3"
   override:
+    - export TESTOPTS="--ci-dir=$CIRCLE_TEST_REPORTS"
     - sudo apt-get install libicu-dev enscript
     - bundle install --without ''
     - 'echo "bundler_use_sudo: false" >> locals.yml'
