--- a/circle.yml
+++ b/circle.yml
@@ -43,8 +43,10 @@ dependencies:
     - 'echo "use_dynamo_tables: false" >> locals.yml'
     - 'echo "use_dynamo_properties: false" >> locals.yml'
     - 'case $CIRCLE_NODE_INDEX in 1) echo "no_https_store: true" >> locals.yml ;; esac'
-    - 'case $CIRCLE_NODE_INDEX in 1) echo "override_dashboard: \"localhost-studio.code.org:3000\"" >> locals.yml ;; esac'
-    - 'case $CIRCLE_NODE_INDEX in 1) echo "override_pegasus: \"localhost.code.org:3000\"" >> locals.yml ;; esac'
+    - 'case $CIRCLE_NODE_INDEX in 1) echo "override_dashboard: \"localhost-studio.code.org\"" >> locals.yml ;; esac'
+    - 'case $CIRCLE_NODE_INDEX in 1) echo "override_pegasus: \"localhost.code.org\"" >> locals.yml ;; esac'
+    - 'case $CIRCLE_NODE_INDEX in 1) echo "dashboard_port: \"3000\"" >> locals.yml ;; esac'
+    - 'case $CIRCLE_NODE_INDEX in 1) echo "pegasus_port: \"3000\"" >> locals.yml ;; esac'
     # Run rake install
     - bundle exec rake install:
         environment:
