--- a/apps/package.json
+++ b/apps/package.json
@@ -126,7 +126,7 @@
     "node-sass": "1.2.2",
     "npm-which": "2.0.0",
     "phantomjs-prebuilt": "^2.1.3",
-    "playground-io": "bcjordan/playground-io#tap-cap-touch",
+    "playground-io": "^0.4.0",
     "progress-bar-webpack-plugin": "^1.8.0",
     "radium": "0.18.1",
     "react": "15.3.0",
